# appsignal-kubernetes

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.build  Makefile  README.md  Rakefile  deployment.yaml  index.yaml  mono.yml  rust-toolchain.toml
.changesets/: add-per-node-phase-to-sent-metrics.md  ensure-reported-values-are-always-positive.md  fix-helm-chart-namespace.md  fix-helm-chart-version.md  fix-helm-releases.md  fix-pod-permissions.md  make-it-easy-to-know-if-wrong-api-key-is-being-used.md  print-configuration-on-startup-to-aid-in-debugging.md  report-container-statuses.md  report-labels-for-pods-and-nodes.md  report-metrics-for-all-pods.md  report-metrics-in-batches.md  report-pod-uptime-and-restart-count.md  report-top-level-owners-for-pods.md  version-bump-without-internal-changes.md
.github/workflows/: ci.yaml  publish_release.yaml  release.yaml
charts/appsignal-kubernetes/: Chart.yaml  values.yaml
charts/appsignal-kubernetes/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  service.yaml  serviceaccount.yaml
charts/appsignal-kubernetes/templates/tests/: test-connection.yaml
lib/: command.rb
protocol/: kubernetes.rs  mod.rs
script/: read_version.sh  write_version
src/: main.rs  ownership.rs
test/fixtures/: digitalocean.json  negative.json
