[package]
name = "appsignal-kubernetes"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
reqwest = "0.12"
serde_json = "1.0"
kube = { version = "0.89", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21", features = ["latest"] }
http = "1.0"
serde = "*"

[profile.release]
lto = true
strip = true
