[package]
name = "appsignal-kubernetes"
version = "1.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt-multi-thread", "time"] }
serde_json = "1.0"
kube = { version = "0.89", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.21", features = ["latest"] }
http = "1.0"
serde = "*"
protobuf = "=2.24.1"
log = "0.4.22"
env_logger = "0.11.3"
time = "~0.1.40"
appsignal-transmitter = { git = "https://github.com/appsignal/appsignal-transmitter.git" }

[profile.release]
lto = true
strip = true
